# AISE-W17D4_AC-Assignment

./: .gitignore  LIMITATIONS.md  PIPELINE.md  QUICKSTART.md  README.md  REPRO.md  RESULTS.md  TEST_PLAN.md  pyproject.toml
data/: manifest.csv
outputs/: README.md  failure_examples.md  results.csv  results.json
src/caption_prototype/: __init__.py  __main__.py  dataset.py  evaluation.py  run.py
