[project]
name = "caption-prototype"
version = "0.1.0"
description = "Reviewable multimodal prototype for image captioning with stress tests"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "pillow>=10.0.0",
    "pandas>=2.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
